bugfix
* fix search person regex